im adding hyperlinks in the unfinished dahsboard

--- a/dashboard/dashbaordV2.html
+++ b/dashboard/dashbaordV2.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 <h1>this is a dashboard demo</h1>
+<a href='../communit_latest/communityV2.html'>this is for the community page</a>
+<a href='../discussionLatest/discussionV2.html'>this is for the discussion page</a>
 </body>
 </html>
