--- a/landing_site/land.html
+++ b/landing_site/land.html
@@ -33,7 +33,7 @@
           </h3>
           <p class="description">
             Join EcoLearn, the gamified environmental learning platform where
-            students, teachers, and communities come together to build a
+            students, te`achers, and communities come together to build a
             sustainable future through interactive challenges, quizzes, and
             real-world eco-actions.
           </p>
